# bills_service

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  env.example  file_service_pb2_grpc.py  init.sql  local-compose.yml  main.py  pyproject.toml  settings.py
.github/workflows/: deploy.yml
common/: logger.py
convert/: extract_data.py  pdf_convert.py
db/: connector.py  db.py  models.py
migrations/: env.py
migrations/versions/: 035c5bbcf4d6_add_account.py  03bd0001c647_add_purchase_date.py  720d9065473f_add_relations.py  75533741767d_add_2_fileds_to_cheque.py  8c94410aa9fd_add_pattern_model.py  aef528460f46_add_category_field.py  af9586858005_initial_migration.py
proto/: cheques_service.proto  file_service.proto
repository/: apply_patterns.py  cheque_detail_repository.py  cheque_repository.py  get_cheques_repository.py
schemas/: cheque_schemas.py
services/: bill_service.py  cheque_api_service.py  extract_data.py  grpc_service.py  pdf_convert.py  process_received_data.py  url_convert.py
services/grpc/: cheques_service.py  file_service.py
tests/: conftest.py  test_services.py
tests/convert/: test_extract_data.py  test_pdf.py  test_url.py  text_extract_tin01.py
tests/fixtures/: json_exceeded.json  json_fixture.json  sber_from_pdf.txt  tin_01.txt
tests/pdf_fixtures/: bill_from_url.txt  bill_link.txt  sber_01.txt  sber_02.txt  sber_03.txt
tests/repositories/: test_apply_patterns.py  test_cheque_detail_repository.py  test_cheque_repository.py  test_get_cheques.py
tests/services/: test_get_cheques_service.py  (+1 more)
utils/: utils.py
